Try adding an include.

--- a/recipes/demo_0.html
+++ b/recipes/demo_0.html
@@ -9,5 +9,7 @@
       This page is only a test.<br>
       Had this been a real page, it would have contained real content.
 
+{% include demo_1/load_js.html %}
+
   </body>
 </html>
